test/extern/ferguson/externblock/two-modules-error.good
two-modules-error.chpl:15: error: Symbol 'y' undeclared in module 'A'
two-modules-error.chpl:18: error: Symbol 'y' undeclared in module 'A'
